Третья исправленная проектная работа

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <meta name="color-scheme" content="dark light" />
         <title>Сложно сосредоточиться</title>
         <script src="./scripts/script.js"></script>
-        <link rel="icon" href="favicon.ico" sizes="any" />
-        <link rel="icon" href="icon.svg" type="image/svg+xml" />
-        <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+        <link rel="icon" href="./images/favicon.ico" sizes="any" />
+       <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+        <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
         <link rel="stylesheet" href="./fonts/fonts.css" />
         <link rel="stylesheet" href="./styles/variables.css" />
         <link rel="stylesheet" href="./styles/globals.css" />
@@ -137,7 +137,7 @@
                     </article>
                 </div>
             </section>
-            <section class="section">
+            <section class="section picture-section">
                 <h3 class="title__card-picture title-decor">А можно в картинках?</h3>
                 <article class="pictures-content">
                     <img class="picture-stylization picture-sunset" src="images/sunset.png" loading="lazy" alt="картинка заката" />
