Третья исправленная проектная работа

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p class="description__text title-decor">Что делать, когда не можешь делать ничего</p>
                 <p class="description__text title-decor">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
             </div>
-            <span class="decorative__REC" aria-hidden="true">REC</span>
+            <span class="header__rec" aria-hidden="true">REC</span>
         </header>
         <main class="main">
             <section class="section">
@@ -67,9 +67,9 @@
                     </article>
                 </div>
             </section>
-            <section class="section section__vertical">
+            <section class="section contetnt-section">
                 <h2 class="title__card">Что снижает концентрацию внимания?</h2>
-                <div class="article-list article-list__horizontal">
+                <div class="article-list article-list__content">
                     <article>
                         <h3 class="title__card-text title-decor">Многозадачность</h3>
                         <p class="card__text">
