Исправленная третья проектная работа

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
                         </p>
                     </article>
-                    <article>
+                    <article class="article">
                         <h3 class="title__card-text title-decor">Гаджеты</h3>
                         <p class="card__text">
                             Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и
